--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shopping-list",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://isgb.github.io/shopping-list-reactjs/build",
+  "main": "index.js",
+  "homepage": "http://isgb.github.io/shopping-list-reactjs",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
